Modify style foundation to express new branding theme
Rename item folder in server/api, also add google fonts

--- a/client/app/admin/admin.scss
+++ b/client/app/admin/admin.scss
@@ -1,1 +1,8 @@
-.trash { color:rgb(209, 91, 71); }
+.trash { 
+	color:rgb(209, 91, 71); 
+}
+
+h2 {
+    font-family: "Comfortaa", 700;
+	color: white;
+}
