--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,34 +1,45 @@
 .thing-form {
     margin: 20px 0;
 }
-
-#banner {
-    border-bottom: none;
-    margin-top: -20px;
-}
-
-#banner h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-}
-
-.hero-unit {
-    position: relative;
-    padding: 30px 15px;
-    color: #F5F5F5;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
-}
-
 .footer {
+    color: white;
     text-align: center;
     padding: 30px 0;
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
 }
-
+.navbar {
+    font-family: "Comfortaa", 700;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
+}
 .navbar-text {
-  margin-left: 15px;
+    margin-left: 15px;
+}
+.navbar-header {
+    margin-top: 10px;
+}
+.navbar-brand {
+    border: 2px solid #777;
+    height: 30px;
+    line-height: 6px;
+    padding: 10px 15px;
+}
+
+.well {
+    box-shadow: -4px 4px 5px rgba(0, 0, 0, .4);
+}
+
+.item-input {
+    background: rgba(0, 0, 0, .6);
+    border: solid 2px white;
+    border-radius: 5px;
+    color: white;
+    margin: 20px 25% 20px 0;
+    padding: 10px;
+    transition: border .3s;
+    width: 50%;
+}
+
+.item-search {
+    float: left;
 }
