--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -34,7 +34,8 @@
     border: solid 2px white;
     border-radius: 5px;
     color: white;
-    margin: 20px 25% 20px 0;
+    display: inline;
+    margin: 20px 0;
     padding: 10px;
     transition: border .3s;
     width: 50%;
