Implement basic CRUD features for items and corresponding view in relation to Inventory service

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -4,6 +4,17 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'font-awesome/scss/font-awesome';
 
+@mixin clearfix {
+    &:before,
+    &:after {
+        content: ' ';
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
 /**
  * App-wide Styles
  */
