--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
  * App-wide Styles
  */
 
+::selection {
+    background: #e3c9fb;
+}
+
+::-moz-selection {
+    background: #e3c9fb;
+}
+
 html,
 body {
 	width: 100%;
