Add light animations to content wells and begin taking care of code documentation
Really should have been commenting all along, remember for the future

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -41,10 +41,10 @@ ul {
 
 .well {
     @include clearfix;
-    animation-duration: .4s;
+    animation-duration: .3s;
     animation-iteration-count: 1;
     animation-name: loadInWell;
-    animation-timing-function: ease-in;
+    animation-timing-function: ease-out;
     box-shadow: -4px 4px 5px rgba(0, 0, 0, .4);
 }
 
